2006-03-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/installation.doc: Added installation instructions for
	MacOS X users based on the discussion from the Help forum:
	"3.9.1 on MacOS X doesn't compile".

2006-03-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/Makefile.am, doc/images/Makefile.am,
	doc/images/itpp_logo.png, doc/images/newcom_logo.png,
	doc/local/itpp_header.html: Added Newcom project logo to the IT++
	home pages.
	
2006-03-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS, TODO, configure.ac: Final cosmetic changes before 3.10.0
	release scheduled for March 15th.

	* AUTHORS: Moved not active developers to "Retired Developers"
	section.

2006-03-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/installation.doc, doc/local/linking.doc, 
	doc/local/users_guide.doc: Added Table of Contents and revised
	some parts of the documentation.
	
	* doc/local/verification.doc: Added tests for Fedora Core 4 with
	ATLAS and FFTW.

2006-03-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/modulator_nd_test.cpp, tests/modulator_nd_test.ref: Minor
	fixes in modulator_nd_test program (check if HAVE_LAPACK is
	defined).

	* config/acx_fft.m4: Fixed a bug in detection of FFT library when
	explicit `--with-fft=-lfftw3' was used.

2006-03-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/features.doc, doc/local/index.doc.in: Cosmetic
	documentation changes.

==============================================================================

2006-03-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.0-rc1 released (CVS tag: release-3-10-0-rc1)

	* NEWS: Updated to include changes since IT++ 3.9.1 was released.

2006-03-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.am, doc/Makefile.am: Beside `*.gzip' distribution
	packages `*.bzip2' packages will be produced automatically.

	* configure.ac, doc/local/index.doc.in: ITPP_EXTERNAL_VERSION